# biomed_clip_demo

backend/: pyproject.toml
backend/src/: main.py  test_inferenece.py
backend/src/endpoints/: inference.py  status.py
backend/src/utils/: custom_error_handlers.py  custom_logger.py  model.py  time.py  token.py
frontend/: package-lock.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ImageUpload.css  ImageUpload.js
